// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Divider Dashed 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <hr
      class="sc-iklJeh FcBjb sc-hiKfDv ioFQtv"
      type="dashed"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <hr
      class="sc-iklJeh dGFJPJ sc-hiKfDv ioFQtv"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Custom Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <hr
      class="sc-iklJeh ftdyPs sc-hiKfDv iLjEf"
      color="#ccc"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Divider With Text Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd eAGOxR sc-hHEiqL kKgAeg sc-hiKfDv ioFQtv"
    >
      <hr
        class="sc-iklJeh sc-jJMGnK FcBjb dNmtHP"
        type="dashed"
      />
      <span
        class="sc-fKgJPI jlSUcY sc-iwajpm gpSJef"
      >
        some text
      </span>
      <hr
        class="sc-iklJeh sc-jJMGnK FcBjb dNmtHP"
        type="dashed"
      />
    </div>
  </div>
</div>
`;
